--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=1920 height=1080 tabindex="-1" style="width: 1920px; height: 1080px; background: #231F20"></canvas>
-    <script src="Build/GoGoBall-Host_Build.loader.js"></script>
+    <script src="Build/GoGoBallHost.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -26,9 +26,9 @@
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
         arguments: [],
-        dataUrl: "Build/GoGoBall-Host_Build.data",
-        frameworkUrl: "Build/GoGoBall-Host_Build.framework.js",
-        codeUrl: "Build/GoGoBall-Host_Build.wasm",
+        dataUrl: "Build/GoGoBallHost.data",
+        frameworkUrl: "Build/GoGoBallHost.framework.js",
+        codeUrl: "Build/GoGoBallHost.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "EverideaInteractive",
         productName: "GoGoBallHost",
