--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity Web Player | GoGoBallHost</title>
   </head>
-  <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=1920 height=1080 tabindex="-1" style="width: 1920px; height: 1080px; background: #231F20"></canvas>
-    <script src="Build/GoGoBallHost.loader.js"></script>
+    <script src="Build/GoGoBall-Host_Build.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -27,14 +26,13 @@
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
         arguments: [],
-        dataUrl: "Build/GoGoBallHost.data",
-        frameworkUrl: "Build/GoGoBallHost.framework.js",
-        codeUrl: "Build/GoGoBallHost.wasm",
+        dataUrl: "Build/GoGoBall-Host_Build.data",
+        frameworkUrl: "Build/GoGoBall-Host_Build.framework.js",
+        codeUrl: "Build/GoGoBall-Host_Build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "EverideaInteractive",
         productName: "GoGoBallHost",
         productVersion: "0.1.0",
-        dataCaching: false,
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
         // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
