--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity Web Player | GoGoBallHost</title>
+    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
   </head>
-   <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=1920 height=1080 tabindex="-1" style="width: 1920px; height: 1080px; background: #231F20"></canvas>
     <script src="Build/GoGoBallHost.loader.js"></script>
@@ -24,7 +24,11 @@
 
         document.body.style.textAlign = "left";
       }
-
+      window.addEventListener('error', function(e) {
+          if (e.message.includes('undefined')) {
+              console.error("Ditemukan panggilan URL undefined! Periksa variabel serverUrl di Unity Inspector.");
+          }
+      }, true);
       createUnityInstance(document.querySelector("#unity-canvas"), {
         arguments: [],
         dataUrl: "Build/GoGoBallHost.data",
