--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         dataUrl: "Build/GoGoBallHost.data",
         frameworkUrl: "Build/GoGoBallHost.framework.js",
         codeUrl: "Build/GoGoBallHost.wasm",
-        streamingAssetsUrl: "StreamingAssets",
+      streamingAssetsUrl: "",
         companyName: "EverideaInteractive",
         productName: "GoGoBallHost",
         productVersion: "0.1.0",
